# yyyoink_desktop

./: '  .bashrc  .editorconfig  .gitignore  .qmlls.ini  CMakeLists.txt  Cargo.toml  Dockerfile  Explorer.qml  README.md  designfiles.cpp  flake.nix  main.cpp  main.qml  main.qrc  precommit.sh  result  rust-toolchain.toml
.ccls-cache/@@home@tymalik@Docs@Git@yyyoink/: @nix@store@aw59wafndjy2d1zab7cyym968s8mxmk5-glibc-2.40-66-dev@include@alloca.h.blob  @nix@store@aw59wafndjy2d1zab7cyym968s8mxmk5-glibc-2.40-66-dev@include@bits@atomic_wide_counter.h.blob  @nix@store@aw59wafndjy2d1zab7cyym968s8mxmk5-glibc-2.40-66-dev@include@bits@byteswap.h.blob  @nix@store@aw59wafndjy2d1zab7cyym968s8mxmk5-glibc-2.40-66-dev@include@bits@confname.h.blob  @nix@store@aw59wafndjy2d1zab7cyym968s8mxmk5-glibc-2.40-66-dev@include@bits@cpu-set.h.blob  @nix@store@aw59wafndjy2d1zab7cyym968s8mxmk5-glibc-2.40-66-dev@include@bits@dirent.h.blob  @nix@store@aw59wafndjy2d1zab7cyym968s8mxmk5-glibc-2.40-66-dev@include@bits@dirent_ext.h.blob  @nix@store@aw59wafndjy2d1zab7cyym968s8mxmk5-glibc-2.40-66-dev@include@bits@endian.h.blob  @nix@store@aw59wafndjy2d1zab7cyym968s8mxmk5-glibc-2.40-66-dev@include@bits@endianness.h.blob  @nix@store@aw59wafndjy2d1zab7cyym968s8mxmk5-glibc-2.40-66-dev@include@bits@environments.h.blob  (+238 more)
src/: main.rs
yyyoink-parse/: .bashrc  .editorconfig  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  flake.nix  yyyoink-parse.cabal
yyyoink_rust/: Cargo.toml  flake.nix
yyyoink_rust/src/capture/: capture_models.rs  capture_pane.rs  capture_sidebar.rs  mod.rs
yyyoink_rust/src/editor/: editor_models.rs  editor_sidebar.rs
yyyoink_rust/src/enums/: pane.rs
yyyoink_rust/src/utilities/: file.rs  mod.rs
yyyoink_rust/src/yoink/: mod.rs
(+22 files in other folders)
