[package]
name = "yyyoink_desktop"
edition = "2021"
version = "0.1.0"

[dependencies]
iced = { version = "0.13.1", features = ["advanced", "tokio"] }
iced_aw = { version = "0.12.0", default-features = false, features = ["context_menu"] }
tokio = { version = "1.44.2", features = ["fs", "io-util"] }
chrono = "0.4.40"
palette = "0.7.4"
